# spmat

./: CMakeLists.txt  README.md  csc.cpp  csc.h  lsolve.h  lsolve_dense.cpp  lsolve_dense_opt.cpp  lsolve_sparse.cpp  main.cpp  spmv.cpp  spmv.h
data/sample/: L.mtx  b_dense.mtx  b_sparse.mtx  x.mtx
